--- a/pdf-theme.yml
+++ b/pdf-theme.yml
@@ -90,19 +90,7 @@ font:
       normal: SpaceGrotesk.ttf
       italic: SpaceMono_Italic.ttf
       bold: SpaceGrotesk_Bold.ttf
-      bold_italic: SpaceMono_Bold_Italic.ttf
-    Emoji:
-      # normal: OpenSansEmoji.ttf
-      # bold: OpenSansEmoji.ttf
-      # italic: OpenSansEmoji.ttf
-      # bold_italic: OpenSansEmoji.ttf
-      normal: NotoColorEmoji.ttf
-      bold: NotoColorEmoji.ttf
-      italic: NotoColorEmoji.ttf
-      bold_italic: NotoColorEmoji.ttf
-  # fallbacks:
-  #   - M+ 1p Fallback
-  #   - Emoji
+      bold_italic: SpaceMono_Bold_Italic.ttfi
 codespan:
   font-family: Courier
   font-size: 85%
